// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add quotes 1`] = `
"---
Name:
  - '#Hello'
  - World
  - ' #Hi'
  - '#with/tab'
  - '#with/tab/teb/tib'
  - '#howdy_bla'
  - '#howdy-bla'
Other tag: '#Nothing'
tags:
  - '#Nothing'
date updated: '2010-06-10T00:20:00+02:00'

---

Outside frontmatter

#tag
"
`;

exports[`Adds tags 1`] = `
"---
Name:
  - '#Hi'
date updated: '2010-06-10T00:20:00+02:00'
tags:
  - '#hello'
  - '#world'

---
"
`;

exports[`Creates a header 1`] = `
"---
date updated: '2010-06-10T00:20:00+02:00'

---

No Header
"
`;

exports[`Creates date first time 1`] = `
"---
date updated: '2010-06-10T00:20:00+02:00'

---

No Header
"
`;

exports[`Does not create a header 1`] = `
"No Header
"
`;

exports[`Does not modify date 1`] = `
"---
date updated: '1999-06-10T00:20:00+02:00'

---
"
`;

exports[`Maintains properties in header 1`] = `
"---
title: Example
list:
  - oneX
  - 0
  - false
date updated: '2010-06-10T00:20:00+02:00'

---

# What the Semantic Web ignores

The Web is not only about facts,
It's about humans communicating all sorts of things.
In their own language, with their own model of the world.

perhaps 1% ? of the humans use it for facts?
"
`;

exports[`Preserve previous tags 1`] = `
"---
tags:
  - '#preserve_me'
  - '#hello'
  - '#world'
date updated: '2010-06-10T00:20:00+02:00'

---
"
`;

exports[`Preserve previous tags 2`] = `
"---
date updated: '2010-06-10T00:20:00+02:00'
tags:
  - '#literatura'

---
"
`;

exports[`Respects emojis 1`] = `
"---
tag: '#🦐'
date updated: '2010-06-10T00:20:00+02:00'

---

🦐
"
`;

exports[`Respects hash 1`] = `
"---
tag: '#Interpretability'
date updated: '2010-06-10T00:20:00+02:00'

---
"
`;

exports[`add quote 1`] = `
"---
tag: '#hello'
date updated: '{{date:YYYY-MM-DDTHH:mm:ssZ}}'

---
"
`;
